--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  transition: all 0.4s ease;
 }
 
 header {
@@ -34,6 +35,7 @@ header {
   width: 300px;
   text-align: center;
   position: relative;
+  transition: all 0.4s ease;
 }
 
 @property --angle {
